about: fix 'download my resume' alignment with 'services

--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -22,8 +22,6 @@
 
 @media only screen and (min-width: 1024px) {
   #carousel {
-    position: absolute;
-    top: calc(50% - (2.5rem / 2));
-    width: 100%;
+    margin-top: 3rem;
   }
 }
